@@ -1,7 +1,7 @@
 #' Person fit statistics
 #' 
 #' \code{personfit} calculates the Zh values from Drasgow, Levine and Williams (1985) for 
-#' unidimensional and multidimensional models, as well as infit and outfit statistics. 
+#' unidimensional and multidimensional models.
 #' The returned object is a \code{data.frame}
 #' consisting either of the tabulated data or full data with the statistics appended to the last 
 #' columns. 
@@ -10,7 +10,7 @@
 #' @aliases personfit
 #' @param x a computed model object of class \code{ExploratoryClass}, \code{ConfirmatoryClass}, or 
 #' \code{MultipleGroupClass}
-#' @param degrees the degrees angle to be passed to the \code{\link{iteminfo}} function
+# @param degrees the degrees angle to be passed to the \code{\link{iteminfo}} function
 #' @author Phil Chalmers \email{rphilip.chalmers@@gmail.com}
 #' @keywords person fit
 #' @export personfit
@@ -33,7 +33,7 @@
 #'
 #' #make some data
 #' set.seed(1234)
-#' a <- matrix(rnorm(20),ncol=1)
+#' a <- matrix(rlnorm(20),ncol=1)
 #' d <- matrix(rnorm(20),ncol=1)
 #' items <- rep('dich', 20)
 #' data <- simdata(a,d, 2000, items)
@@ -44,11 +44,11 @@
 #' 
 #'   }
 #' 
-personfit <- function(x, degrees = NULL){        
+personfit <- function(x){        
     if(is(x, 'MultipleGroupClass')){
         ret <- list()   
         for(g in 1:length(x@cmods))
-            ret[[g]] <- personfit(x@cmods[[g]], degrees=degrees)
+            ret[[g]] <- personfit(x@cmods[[g]])
         names(ret) <- names(x@cmods)
         return(ret)
     }
@@ -89,21 +89,23 @@ personfit <- function(x, degrees = NULL){
         }
         Zh[n] <- (LL[n] - mu) / sqrt(sigma2)
     }               
-    V <- Z <- info <- matrix(0, ncol=J, nrow=N)        
-    if(is.null(degrees))
-        if(nfact > 1) degrees <- rep(90/nfact, nfact)            
-    for (i in 1:J){
-        P <- ProbTrace(x=pars[[i]], Theta=Theta)
-        dat <- fulldata[ ,itemloc[i]:(itemloc[i+1] - 1)]            
-        item <- extract.item(x, i)
-        info[,i] <- iteminfo(item, Theta, degrees=degrees)
-        Z[ ,i] <- rowSums(dat - dat * P) / sqrt(info[,i])                         
-    }
-    if(!is.null(attr(x, 'inoutfitreturn'))) return(list(Z=Z, info=info))
-    outfit <- rowSums(Z^2) / J
-    infit <- rowSums(Z^2 * info) / rowSums(info)    
-    if(full.scores) ret <- data.frame(x@data, outfit=outfit, infit=infit, Zh=Zh)
-    else ret <- data.frame(x@tabdata, outfit=outfit, infit=infit, Zh=Zh)        
+#     V <- Z <- info <- matrix(0, ncol=J, nrow=N)        
+#     if(is.null(degrees))
+#         if(nfact > 1) degrees <- rep(90/nfact, nfact)            
+#     for (i in 1:J){
+#         P <- ProbTrace(x=pars[[i]], Theta=Theta)
+#         dat <- fulldata[ ,itemloc[i]:(itemloc[i+1] - 1)]            
+#         item <- extract.item(x, i)
+#         info[,i] <- iteminfo(item, Theta, degrees=degrees)
+#         Z[ ,i] <- rowSums(dat - dat * P) / sqrt(info[,i])                         
+#     }
+#     if(!is.null(attr(x, 'inoutfitreturn'))) return(list(Z=Z, info=info))
+#     outfit <- rowSums(Z^2) / J
+#     infit <- rowSums(Z^2 * info) / rowSums(info)    
+#     if(full.scores) ret <- data.frame(x@data, outfit=outfit, infit=infit, Zh=Zh)
+#     else ret <- data.frame(x@tabdata, outfit=outfit, infit=infit, Zh=Zh)        
+    if(full.scores) ret <- data.frame(x@data, Zh=Zh)
+    else ret <- data.frame(x@tabdata, Zh=Zh)        
     return(ret)
 }
     
