@@ -1,6 +1,6 @@
 #' Translate mirt parameters for plink package
 #' 
-#' This function exports item parameters from the \code{mirt} package to the \code{\link{plink}} package.
+#' This function exports item parameters from the \code{mirt} package to the \code{plink} package.
 #' 
 #' 
 #' @aliases read.mirt
